--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,72 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+@if (isBrowser) {
+<main [ngClass]="darkMode() ? 'dark' : ''">
+  <div
+    class="bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50 fixed z-50 h-screen w-screen"
+  >
+    <!-- LOADING -->
+    @if (loading()) {
+    <div class="h-screen w-screen flex justify-center items-center">
+      <div class="flex items-center flex-col">
+        <div class="h-36 w-36 loader my-5 relative">
+          <div
+            class="h-36 w-36 rounded-full overflow-hidden absolute before:bg-primary-500"
+          ></div>
+          <div class="h-32 w-32 rounded-full absolute"></div>
+        </div>
+        <h1 class="text-center">Recopilando información del servidor</h1>
+      </div>
+    </div>
+    }
+    <!-- END LOADING -->
+
+    <!-- HEADER -->
+    <header
+      class="flex justify-between items-center border-b border-primary-300 dark:border-primary-800 py-2 px-5 lg:px-10"
+    >
+      <div>
+        <h1 class="text-xl">Technical Test</h1>
+      </div>
+      <!-- DARK MODE ON -->
+      @if (darkMode()) {
+      <div
+        class="h-6 w-6 bg-primary-50 text-primary-950 rounded-full flex justify-center items-center p-1 cursor-pointer"
+        (click)="toggleDarkMode()"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+      } @else {
+      <!-- END DARK MODE ON -->
+      <!-- DARK MODE OFF -->
+      <div
+        class="h-6 w-6 bg-primary-950 text-primary-50 rounded-full flex justify-center items-center p-1 cursor-pointer"
+        (click)="toggleDarkMode()"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z"
+          />
+        </svg>
+      </div>
+      }
+      <!-- END DARK MODE OFF -->
+    </header>
+    <!-- END HEADER -->
+  </div>
+</main>
+}
