feat: Proxy server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-@if (isBrowser) {
 <main [ngClass]="darkMode() ? 'dark' : ''">
   <div
     class="bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50 fixed z-50 h-screen w-screen"
@@ -67,6 +66,9 @@
       <!-- END DARK MODE OFF -->
     </header>
     <!-- END HEADER -->
+
+    <section>
+      <h1>{{ data()?.length }}</h1>
+    </section>
   </div>
 </main>
-}
