--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,26 @@
 <main [ngClass]="darkMode() ? 'dark' : ''">
-  <div
-    class="bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50 fixed z-50 h-screen w-screen"
-  >
-    <!-- LOADING -->
-    @if (loading()) {
-    <div class="h-screen w-screen flex justify-center items-center">
-      <div class="flex items-center flex-col">
-        <div class="h-36 w-36 loader my-5 relative">
-          <div
-            class="h-36 w-36 rounded-full overflow-hidden absolute before:bg-primary-500"
-          ></div>
-          <div class="h-32 w-32 rounded-full absolute"></div>
-        </div>
-        <h1 class="text-center">Recopilando información del servidor</h1>
+  <!-- LOADING -->
+  @if (loading()) {
+  <div class="h-screen w-screen flex justify-center items-center fixed z-50 bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50">
+    <div class="flex items-center flex-col">
+      <div class="h-36 w-36 loader my-5 relative">
+        <div
+          class="h-36 w-36 rounded-full overflow-hidden absolute before:bg-primary-500"
+        ></div>
+        <div class="h-32 w-32 rounded-full absolute"></div>
       </div>
+      <h1 class="text-center">Recopilando información del servidor</h1>
     </div>
-    }
-    <!-- END LOADING -->
+  </div>
+  } @else {
+  <!-- END LOADING -->
 
+  <div
+    class="bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50 overflow-auto"
+  >
     <!-- HEADER -->
     <header
-      class="flex justify-between items-center border-b border-gray-200 dark:border-primary-800 bg-white dark:bg-primary-950 py-3 px-5 lg:py-5 lg:px-10"
+      class="flex justify-between items-center border-b border-gray-200 dark:border-primary-800 bg-white dark:bg-primary-950 py-3 px-5 lg:py-5 lg:px-10 fixed top-0 w-full"
     >
       <div>
         <h1 class="text-xl">Technical Test</h1>
@@ -68,7 +68,7 @@
     <!-- END HEADER -->
 
     <!-- MAIN SECTION -->
-    <section class="p-5 lg:px-10 lg:py-6">
+    <section class="p-5 lg:px-10 lg:py-6 mt-16">
       <div
         class="border rounded-md border-gray-200 dark:border-primary-800 p-5 flex flex-col-reverse lg:flex-row justify-between"
       >
@@ -99,8 +99,13 @@
           Nueva Transacción
         </button>
       </div>
-      <h1>{{ data()?.length }}</h1>
+      <div class="mt-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+        @for (invoice of data(); track invoice.id) {
+        <app-tr-card [data]="invoice"></app-tr-card>
+        }
+      </div>
     </section>
     <!-- END MAIN SECTION -->
   </div>
+  }
 </main>
