--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,6 +116,8 @@
     <!-- END MAIN SECTION -->
   </div>
   }
+
+  <!-- TRANSACTION FORM -->
   <app-tr-form
     [class.translate-x-full]="!formMode()"
     [class.overflow-hidden]="!formMode()"
@@ -123,6 +125,8 @@
     [class.overflow-auto]="formMode()"
     (closeForm)="formMode.set(false)"
     [data]="currentData()"
+    [allData]="data()"
     class="h-screen w-screen fixed z-50 top-0 bg-primary-50 text-primary-950 dark:bg-primary-950 dark:text-primary-50 duration-500"
   ></app-tr-form>
+  <!-- END TRANSACTION FORM -->
 </main>
